--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Task Manager - Login</title>
+    <title>Task Manager - Dashboard</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
     <link th:href="@{/css/dashboard.css}" rel="stylesheet">
@@ -26,7 +26,7 @@
     <div class="col-md-3">
         <div th:replace="~{fragments/dashboardColumn :: task-column('To Do', ${taskStatus.TODO}, 'info')}"></div>
     </div>
-    <!-- Backlog Column -->
+<!--     Backlog Column-->
     <div class="col-md-3">
         <div th:replace="~{fragments/dashboardColumn :: task-column('Backlog', ${taskStatus.BACKLOG}, 'secondary')}"></div>
     </div>
@@ -34,7 +34,7 @@
     <div class="col-md-3">
         <div th:replace="~{fragments/dashboardColumn :: task-column('In Progress', ${taskStatus.IN_PROGRESS}, 'warning')}"></div>
     </div>
-    <!-- Overdue Column -->
+<!--     Overdue Column-->
     <div class="col-md-3">
         <div th:replace="~{fragments/dashboardColumn :: task-column('Overdue', ${taskStatus.OVERDUE}, 'danger')}"></div>
     </div>
